# Chest-XRay-Report-Assistant

./: .gitignore  README.md  app.py  cv_module.py  pyproject.toml  rag_module.py  utils.py
templates/: cxr_templates.json
